app/assets/stylesheets/_home.sass
$f-dropdown-triangle-size: 0px
$f-dropdown-triangle-color: none
$triangle: false

#home

  .call
    bottom: 7%
    position: absolute
    text-align: center
    width: 100%
    z-index: 9999
    font-size: 20px

    a
      &:hover
        text-decoration: none

  #slideshow
    .slide
      padding: 0

    img
      position: absolute
      width: 100%
      height: 100%
      z-index: 0


    /* Topbar home */
    .social
      padding-top: 40px
      text-align: right
      margin-bottom: 30px
      $f-dropdown-bg: rgba(255,255,255,0.0)
      a
        display: inline-block
        border: 1px solid white
        text-align: center
        margin-right: 10px
        height: 30px
        width: 30px
        color: white
        line-height: 23pt

        &.facebook
          background-color: #3c5a9a

        &.twitter
          background-color: #359bed

        &.play
          background-color: #e82d28

      .l18n
        text-align: left

      .l18n
        +border-radius(none)
        height: 30px
        float: right
        padding: 5px 8px
        font-size: .7em
        color: white
        border: 1px solid white
        background: image-url('arrow.png') no-repeat 30px 10px transparent
        cursor: pointer

      .f-dropdown
        @include dropdown-container($content, $triangle, $max-width)

        a
          border: 0
          width: 100%
          text-align: center
          font-size: 12px
          line-height: 16px

          &:hover
            border-top: 1px solid white
            border-bottom: 1px solid white
            background: rgba(0,0,0,0.3)
            color: white
            text-decoration: none

  .orbit-bullets
    left: 80%
    top: 90%

  .blackBlock
    font-family: "Gandhi Sans", sans-serif
    background: rgba(0,0,0,0.8)
    color: white
    padding: 10px

  .whiteBlock
    font-family: "Gandhi Sans", sans-serif
    background: white
    color: black
    padding: 10px

  .separator
    margin-bottom: 20px

  section
    padding: 64px 0

    &#welcome
      padding: 0

      .separator
        position: relative


      h1
        background: url("/assets/home/logos/ouishare.png") no-repeat
        color: white
        height: 71px
        margin-top: 100px
        overflow: hidden
        text-indent: -9999px
        width: 364px

        small
          color: white

      h2
        display: inline-block
        text-transform: uppercase
        margin-bottom: 7px
        font-size: 70pt
        color: white

      .textBlock
        padding: 0

        .space
          line-height: 2em
          padding: 3px 10px
          font-size: 17pt
          white-space: pre-line
          display: inline
          color: white
          text-transform: uppercase
          font-weight: normal

      .subscribe
        background: #e8525d
        margin: 40px 0
        padding: 10px
        color: white
        text-align: center
        margin-top: 75%
        .space
          margin: 10px 0
          display: block

        form
          margin: 0

        input
          background: white
          color: black
          height: 46px

        .btn
          font-family: "Gandhi Sans", sans-serif
          font-style: italic
          text-transform: uppercase
          background: #9ad446
          color: white
          font-size: 14px
          font-weight: bold
          padding: 0

          &:hover
            background: darken($blue, 10%)
            color: white

        .prefix, .postfix
          height: 46px


    &#about
      background: image-url('home/bg/about.jpg') no-repeat
      +background-size(cover)
      text-align: center
      //40px: padding 0

      .box
        background: white
        padding: 10px
        height: 285px

      h4
        font-family: "Gandhi Sans", sans-serif
        font-weight: 400
        text-transform: uppercase

      .icon
        width: 171px
        height: 131px
        display: block
        margin: 0 auto

      p
        font-size: 14px

      .separator
        width: 100%

    &#events
      .events
        li
          p, a
            &.title
              overflow: hidden
              display: block
              min-height: 64px
              height: 64px
              max-height: 64px

    &#hot
      .projects
        li
          p, a
            &.title
              overflow: hidden
              display: block
              min-height: 32px
              height: 32px
              max-height: 32px

      .avatars
        text-align: center
      .block
        width: 70px
        height: 70px
        display: inline-block
        margin: 4px 2px

    &#hot, &#events
      color: white

      .projects, .events
        text-align: center
        font-family: "Gandhi Sans", sans-serif

        li
          p, a
            text-align: left
            text-transform: uppercase
            color: white

            &:hover, &:visited
              color: white

            &.title
              font-size: 20px

          img.project
            width: 100%
            height: 100%
            display: block
            margin-bottom: 20px

        a.more
          float: right
          color: white
          font-size: 12px
          font-style: italic


    &#hot
      background: $blue

      .seta
        background: image-url('home/hot-arrow.png') no-repeat center
        display: block
        height: 17px
        margin: 20px 0
        width: 100%

    &#events
      background: $red
      border-top: 1px solid white

      img
        width: 100%
        margin-bottom: 10px

      p.text, p.meta
        font-size: 14px
        font-weight: normal
        font-family: "Gandhi Sans"


    &#articles
      color: black
      border-top: 1px solid white

      .articles

        li
          position: relative

          .title
            text-align: left
            text-transform: uppercase
            font-size: 1.1em
            color: black
            display: block
            min-height: 74px
            height: 74px
            max-height: 74px

          img.article
            width: 100%
            height: 100%
            display: block

          div.author
            display: inline-block
            width: 70%

            img.avatar
              margin-top: 20px
              margin-right: 15px
              float: left
            .name
              font-size: 12px
              display: inline-block
              margin: 23px 0 0
            .date
              font-size: 12px
              color: black

      a.button
        background: $blue
        color: white
        border: 0
        font-size: 1.3em
        text-transform: uppercase
        font-style: italic
        padding: 10px

    &#bepart
      background: image-url('home/bg/about.jpg') no-repeat center
      +background-size(cover)
      width: 100%
      height: 100%

      .part
        background: white
        padding: 0 10px
        margin-bottom: 20px
        overflow: hidden
        font-family: "Gandhi Sans"
        a
          color: black

        &:last-child
          margin-bottom: 0

        .content
          margin-left: 140px

          h4
            @extend .whiteBlock
            font-weight: 500
            margin-bottom: 0
            text-transform: uppercase
            padding-left: 0

      .takePart, .comeTo, .donate
        float: left
        width: 133px
        height: 116px
        display: block

      .takePart
        background: image-url('home/icons/takePart.png') no-repeat
      .comeTo
        background: image-url('home/icons/goEvent.png') no-repeat
      .donate
        background: image-url('home/icons/donate.png') no-repeat

      a.button
        background: $blue
        color: white
        border: 0
        font-size: 1.3em
        text-transform: uppercase
        font-style: italic
        padding: 10px


    &#partners
      text-align: center

      ul
        display: table
        margin: 20px auto

      li
        margin: 0
        padding: 0 10px

        p
          line-height: 30px

    &#know-more
      background: #eee

